contact block (about)

--- a/src/html/views/8-page.html
+++ b/src/html/views/8-page.html
@@ -27,7 +27,92 @@ title: "Розыгрыш конкурсов | О нас"
                 </p>
             </div>
         </div>
+        <div class="about-contact">
+            <div class="about-contact-layout">
+                <div class="about-contact-item">
+                    <div class="about-contact-title">
+                        Реквизиты компании
+                    </div>
+                    <div class="about-contact-box">
+                        <div class="about-contact-box-label">Название компании:</div>
+                        <div class="about-contact-box-val">ООО “Название компании”</div>
+                    </div>
+                    <div class="about-contact-box">
+                        <div class="about-contact-box-label">ИНН:</div>
+                        <div class="about-contact-box-val">9999999999</div>
+                    </div>
+                    <div class="about-contact-box">
+                        <div class="about-contact-box-label">КПП:</div>
+                        <div class="about-contact-box-val">9999999999</div>
+                    </div>
+                    <div class="about-contact-box">
+                        <div class="about-contact-box-label">ОГРН:</div>
+                        <div class="about-contact-box-val">9999999999</div>
+                    </div>
+                    <div class="about-contact-box">
+                        <div class="about-contact-box-label">Юридический адрес:</div>
+                        <div class="about-contact-box-val">г. Пермь, ул. Екатериненская 131</div>
+                    </div>
+                </div>
+                <div class="about-contact-item">
+                    <div class="about-contact-title">
+                        Контакты
+                    </div>
+                    <div class="about-contact-block">
+                        <div class="about-contact-block-item">
+                            <div class="contact-icon contact-icon_home"></div>
+                            <div class="about-contact-block-info">
+                                <div class="about-contact-block-info_label">Адрес:</div>
+                                <div class="about-contact-block-info_val">г. Пермь, ул. Екатеринеская 131</div>
+                            </div>
+                        </div>
+                        <div class="about-contact-block-item">
+                            <div class="contact-icon contact-icon_phone"></div>
+                            <div class="about-contact-block-info">
+                                <div class="about-contact-block-info_label">Телефон:</div>
+                                <div class="about-contact-block-info_val">
+                                    <a href="tel:+79003243213" class="phone">+7 (900) 324-32-13 </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="about-contact-block">
+                        <div class="about-contact-block-item">
+                            <div class="contact-icon contact-icon_email"></div>
+                            <div class="about-contact-block-info">
+                                <div class="about-contact-block-info_label">E-mail:</div>
+                                <div class="about-contact-block-info_val">test@mail.ru</div>
+                            </div>
+                        </div>
+                        <div class="about-contact-block-item">
+                            <div class="soc-icon soc-icon_vk"></div>
+                            <div class="about-contact-block-info">
+                                <div class="about-contact-block-info_label">Вконтакте:</div>
+                                <div class="about-contact-block-info_val">
+                                    <a href="vk.com/namegroup">vk.com/namegroup</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="about-contact-block-item">
+                            <div class="soc-icon soc-icon_inst"></div>
+                            <div class="about-contact-block-info">
+                                <div class="about-contact-block-info_label">Instagram:</div>
+                                <div class="about-contact-block-info_val">
+                                    <a href=https://www.instagram.com/instagramNameAccount">instagramNameAccount</a>
+                                </div>
+                            </div>
+                        </div>
 
+
+
+                    </div>
+
+
+
+
+                </div>
+            </div>
+        </div>
 
 
 
