--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/reviews";
 @import "blocks/viewCat";
 @import "blocks/helper";
+@import "blocks/aboutContact";
 
 //Слои
 @import "layers/header";
