--- a/src/html/includes/modals/auth.html
+++ b/src/html/includes/modals/auth.html
@@ -9,18 +9,18 @@
             </div>
             <div class="modal-body">
                 <div class="auth-form">
-                    <form>
+                    <form class="validate">
                         <div class="l-form-control-flex">
                             <div class="l-form-label">E-mail:</div>
                             <div class="l-form-control-box">
-                                <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email" name="email" value="">
+                                <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email js-require" name="email" value="">
                                 <div class="l-form-control-msg">Введите правильно адрес электронной почты</div>
                             </div>
                         </div>
                         <div class="l-form-control-flex">
                             <div class="l-form-label">Пароль:</div>
                             <div class="l-form-control-box">
-                                <input type="password" class="l-input l-input_l1 l-input-place_l1" name="password" value="">
+                                <input type="password" class="l-input l-input_l1 l-input-place_l1 js-require" name="password" value="">
                                 <div class="l-form-control-msg"></div>
                             </div>
                         </div>
@@ -48,11 +48,11 @@
             </div>
             <div class="modal-body">
                 <div class="auth-form">
-                    <form>
+                    <form class="validate">
                         <div class="l-form-control-flex">
                             <div class="l-form-label">E-mail:</div>
                             <div class="l-form-control-box">
-                                <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email" name="email" value="">
+                                <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email js-require" name="email" value="">
                             </div>
                         </div>
                         <div class="l-modal-recovery-text">
@@ -82,50 +82,50 @@
             </div>
             <div class="modal-body">
                 <div class="form-reg">
-                    <form>
+                    <form class="validate">
                         <div class="l-form-control-flex">
                             <div class="l-form-label">E-mail: *</div>
                             <div class="l-form-control-box">
-                                <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email" name="email">
+                                <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email js-require" name="email">
                                 <div class="l-form-control-msg">Введите правильно адрес электронной почты</div>
                             </div>
                         </div>
                         <div class="l-form-control-flex">
                             <div class="l-form-label">Никнейм: *</div>
                             <div class="l-form-control-box">
-                                <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-string" name="login">
+                                <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-string js-require" name="login">
                                 <div class="l-form-control-msg">Введите никнейм</div>
                             </div>
                         </div>
                         <div class="l-form-control-flex">
                             <div class="l-form-label">Пароль: *</div>
                             <div class="l-form-control-box">
-                                <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-pass" name="password">
+                                <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-pass js-require" name="password">
                             </div>
                         </div>
                         <div class="l-form-control-flex">
                             <div class="l-form-label">Повторите пароль: *</div>
                             <div class="l-form-control-box">
-                                <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-re-pass" name="rePassword">
+                                <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-re-pass js-require" name="rePassword">
                                 <div class="l-form-control-msg">Пароли не совпадают</div>
                             </div>
                         </div>
                         <div class="form-reg-checkbox">
                             <div class="l-checkbox">
-                                <input type="checkbox" id="agree" name="" value="true" checked>
+                                <input type="checkbox" id="agree" name="" value="true" checked class="l-check js-require">
                                 <label for="agree">С
                                     <a href="#">пользовательских соглашением</a> ознакомлен *</label>
                             </div>
                             <div class="l-checkbox">
-                                <input type="checkbox" id="agreePerson" name="" value="true" checked>
+                                <input type="checkbox" id="agreePerson" name="" value="true" checked class="l-check">
                                 <label for="agreePerson">На <a href="#">обработку персональных данных</a> согласен</label>
                             </div>
                             <div class="l-checkbox">
-                                <input type="checkbox" id="sendEmail" name="" value="true" checked>
+                                <input type="checkbox" id="sendEmail" name="" value="true" checked class="l-check">
                                 <label for="sendEmail">Получать оповещения о событиях на почту</label>
                             </div>
                             <div class="l-checkbox">
-                                <input type="checkbox" id="agreeNews" name="" value="true" checked>
+                                <input type="checkbox" id="agreeNews" name="" value="true" checked class="l-check">
                                 <label for="agreeNews">Получать новости от компании</label>
                             </div>
 
