--- a/src/html/views/1-2-home-auth.html
+++ b/src/html/views/1-2-home-auth.html
@@ -18,18 +18,18 @@ title: "Розыгрыш конкурсов | Главная"
                 </div>
                 <div class="modal-body">
                     <div class="auth-form">
-                        <form>
+                        <form class="validate">
                             <div class="l-form-control-flex">
                                 <div class="l-form-label">E-mail:</div>
                                 <div class="l-form-control-box">
-                                    <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email" name="email" value="">
+                                    <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email js-require" name="email" value="">
                                     <div class="l-form-control-msg">Введите правильно адрес электронной почты</div>
                                 </div>
                             </div>
                             <div class="l-form-control-flex">
                                 <div class="l-form-label">Пароль:</div>
                                 <div class="l-form-control-box">
-                                    <input type="password" class="l-input l-input_l1 l-input-place_l1" name="password" value="">
+                                    <input type="password" class="l-input l-input_l1 l-input-place_l1 js-require" name="password" value="">
                                     <div class="l-form-control-msg"></div>
                                 </div>
                             </div>
