--- a/src/html/views/1-5-home-recovery.html
+++ b/src/html/views/1-5-home-recovery.html
@@ -18,11 +18,11 @@ title: "Розыгрыш конкурсов | Главная"
                 </div>
                 <div class="modal-body">
                     <div class="auth-form">
-                        <form>
+                        <form class="validate">
                             <div class="l-form-control-flex is-error">
                                 <div class="l-form-label">E-mail:</div>
                                 <div class="l-form-control-box">
-                                    <input type="text" class="l-input l-input_l1 l-input-place_l1" name="email" value="Test@mail.com">
+                                    <input type="text" class="l-input l-input_l1 l-input-place_l1 js-require" name="email" value="Test@mail.com">
                                     <div class="l-form-control-msg">Мы не нашли такой адрес электронной почты</div>
                                 </div>
                             </div>
