--- a/src/html/views/2-product.html
+++ b/src/html/views/2-product.html
@@ -21,13 +21,13 @@ title: "Розыгрыш конкурсов | Главная"
             </div>
             <div class="product-tabs">
                 <ul class="nav nav-tabs">
-                    <li class="nav-item">
+                    <li class="nav-item nav-item_l1 active">
                         <a class="nav-link active" data-toggle="tab" href="#description">Описание</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-item_l2">
                         <a class="nav-link" data-toggle="tab" href="#characteristics">Характеристики</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-item_l3">
                         <a class="nav-link" data-toggle="tab" href="#others">Другое</a>
                     </li>
                 </ul>
@@ -72,7 +72,7 @@ title: "Розыгрыш конкурсов | Главная"
                 <div class="product-desc-icon cart-icon cart-icon_big timer"></div>
                 <div class="product-desc-info">
                     Осталось:
-                    <div class="product-timer-box js-product-time" data-countdown="Sep 30, 2020 00:00:00">
+                    <div class="product-timer-box js-product-time" data-countdown="Sep 30, 2021 00:00:00">
                         <div class="product-timer-item"><span id="days"></span> дня</div>
                         <div class="product-timer-item"><span id="hours"></span> ч.</div>
                         <div class="product-timer-item"><span id="minutes"></span> мин.</div>
