--- a/src/scss/blocks/_catalogs.scss
+++ b/src/scss/blocks/_catalogs.scss
@@ -158,6 +158,7 @@
           align-items: center;
         }
         .catalog-date {
+          padding-top: 0;
           padding-right: 6px;
         }
       }
