--- a/src/html/views/8-page.html
+++ b/src/html/views/8-page.html
@@ -98,7 +98,7 @@ title: "Розыгрыш конкурсов | О нас"
                             <div class="about-contact-block-info">
                                 <div class="about-contact-block-info_label">Instagram:</div>
                                 <div class="about-contact-block-info_val">
-                                    <a href=https://www.instagram.com/instagramNameAccount">instagramNameAccount</a>
+                                    <a href="https://www.instagram.com/instagramNameAccount">instagramNameAccount</a>
                                 </div>
                             </div>
                         </div>
